--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: swift
+language: objective-c
 osx_image: xcode11.3
 xcode_project: frameworks/SwiftlyCache.xcodeproj
 xcode_scheme: SwiftlyCache
