--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
+osx_image: xcode10.2
 language: objective-c
-osx_image: xcode11.3
+xcode_sdk: iphonesimulator13.2
+
 xcode_project: frameworks/SwiftlyCache.xcodeproj
 xcode_scheme: SwiftlyCache
 
-before_install:
-- env
-- xcodebuild -version
-- xcodebuild -showsdks
-- xcpretty --version
-
-script:
-- set -o pipefail
-- xcodebuild clean build -project "$TRAVIS_XCODE_PROJECT"  -scheme "$TRAVIS_XCODE_SCHEME" | xcpretty
+# whitelist
+branches:
+only:
+- master
