--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
-osx_image:xcode10.2
+osx_image:xcode11.3
 language:objective-c
-xcode_sdk:iphonesimulator13.2
 
 xcode_project:frameworks/SwiftlyCache.xcodeproj
 xcode_scheme:SwiftlyCache
+xcode_destination: platform=iOS Simulator,OS=10.14.4,name=iphone
+
+script:
+  - |
+    xcodebuild test \
+    -project frameworks/SwiftlyCache.xcodeproj \
+    -scheme SwiftlyCache \
+    -sdk iphonesimulator \
+    -destination 'platform=iOS Simulator,name=iPhone X,OS=latest' \
+    | xcpretty
