--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_install:
 - xcodebuild -version
 - xcodebuild -showsdks
 - xcpretty --version
+
+script:
+- set -o pipefail && xcodebuild -project frameworks/SwiftlyCache.xcodeproj -scheme SwiftlyCache build test | xcpretty
