--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-osx_image: xcode11.3		
-language: objective-c		
-script:		
-  - |		
-    xcodebuild test \		
-    -project frameworks/SwiftlyCache.xcodeproj \		
-    -scheme SwiftlyCache \		
-    -sdk iphonesimulator \		
-    -destination 'platform=iOS Simulator name=iPhone X	OS=latest' \
-    | xcpretty		
+osx_image: xcode11.3
+language: objective-c
+xcode_project: frameworks/SwiftlyCache.xcodeproj
+script: xcodebuild -project frameworks/SwiftlyCache.xcodeproj -scheme "SwiftlyCache" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone X,OS=latest'
