--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ script:
     -project frameworks/SwiftlyCache.xcodeproj \		
     -scheme SwiftlyCache \		
     -sdk iphonesimulator \			
+    -destination 'platform=iOS Simulator,name=iPhone X,OS=latest' \
+    | xcpretty	
